--- a/main_article/main_article.Rmd
+++ b/main_article/main_article.Rmd
@@ -63,7 +63,7 @@ We find that, due to relatively sparse information on the differences with and w
 
 # Introduction
 
-As of the 12/Mar/2020, over 125,000 cases of coronavirus disease (COVID-19) have been confirmed globally across 132 countries [@WHO_sitrep]. Sustained human-to-human transmission have now been observed in multiple countries or regions outside of mainland China such as Italy, Japan, and the Republic of Korea with 142,012, 620, and 7869 cases reported, respectively by 12/Mar/2020 [@WHO_sitrep]. Conversely, some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas [REF3]. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country [REF4]. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated [REF5]. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures [REF6].
+As of the 12/Mar/2020, over 125,000 cases of coronavirus disease (COVID-19) have been confirmed globally across 132 countries [@WHO_sitrep]. Sustained human-to-human transmission have now been observed in multiple countries or regions outside of mainland China such as Italy, Japan, and the Republic of Korea with 142,012, 620, and 7869 cases reported, respectively by 12/Mar/2020 [@WHO_sitrep]. Conversely, some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas [@WHO_sitrep]. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country [REF4]. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated [REF5]. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures [REF6].
 
 Social distancing (SD) measures can be effective control measures in outbreak settings [REF7]. These can be broadly defined as: i) isolation, the separation of ill individuals from non-infected individuals; ii) quarantine, the separation of individuals who have been assumed to be exposed and; iii) community containment, an intervention applied to an entire community aimed at reducing contacts and movements including school and workplace closures and restrictions or cancellation of mass gatherings [@wilder]. Social distancing measures are intended to reduce mixing and rates of contact between individuals in the community, therefore reducing rates of potential transmission to the susceptible population [REF8].
 
