--- a/main-article/main-article.Rmd
+++ b/main-article/main-article.Rmd
@@ -64,7 +64,7 @@ p_load("flextable")
 ## Conclusions
 
 
-# Summary
+# Summary - *merge into abstract*
 
 - School closures, remote working and quarantine have been the most common social
 distancing interventions applied for COVID-19 to date.
@@ -150,24 +150,18 @@ knitr::include_graphics("../figures/social-all-time-1.png")
 
 # Discussion
 
-Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. Interventions have been most stringent in Hubei province (China), where intensive travel restrictions have affected 40-60 million residents [@wu2020characteristics and @WHO]. 
-<!-- Can we mention Italy has adopted similar measures now? -->
-Across other parts of China, extensive public health efforts including quarantine, cancellation of large gatherings, and travel restrictions have been implemented [REF15]. Outside of mainland China, countries and regions most affected by COVID-19 have or have started to introduce social distancing interventions in efforts to contain and limit the spread of COVID-19. For example, Singapore has conducted extensive contact tracing and quarantine measures for confirmed cases and Italy has enforced nationwide school closures [REF16].
+Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. Interventions have been most stringent in Hubei province (China), where intensive travel restrictions have affected 40-60 million residents [@wu2020characteristics and @WHO]. Across other parts of China, extensive public health efforts including quarantine, cancellation of large gatherings, and travel restrictions have been implemented [REF15]. Outside of mainland China, countries and regions most affected by COVID-19 have or have started to introduce social distancing interventions in efforts to contain and limit the spread of COVID-19. For example, Singapore has conducted extensive contact tracing and quarantine measures for confirmed cases and Italy has enforced nationwide school closures [REF16].
 
 The timing of and the degree to which social distancing measures have been implemented varies between the countries and regions we considered, but also globally. For example, some countries and regions such as the USA have implemented reactive and selective local school closures only, whereas Hong Kong, for similar cumulative case counts, has introduced a large number of voluntary (e.g. advice on avoiding crowded places) and mandatory (e.g. quarantine, contact tracing, wide-scale proactive school closures) social distancing measures [REF17]. It is important to note that most countries and regions have implemented isolation of cases, contact tracing and quarantine in response to the first imported cases from Hubei, China (Japan, Thailand, South Korea, USA, Singapore since mid- to late-January) [REF18]. Other countries have introduced interventions in response to a large number of newly reported cases (Italy and Iran) more recently (supplementary table 3) [REF19].
 
 Many social distancing interventions have focused on public messaging to encourage positive behaviour change. For example, encouraging individuals to work remotely, avoid the crowds, and restrict non-essential travel. As such interventions are not enforced, its effectiveness will be dependent on the public compliance. A recent YouGov survey found that risk perception differed by country [@yougov]. A higher proportion of respondents in Asian countries reported being concerned about their risk of being infected compared to European or North American countries. This is also reflected in self-reported positive behaviour changes. A majority of respondents in Asia surveyed are avoiding crowded places (e.g., 83% in Hong Kong). Advocating for remote working have led to the greatest positive behavior China in mainland China and Hong Kong, with 67% and 45% reportedly avoiding going to the office, respectively. These high figures compared to other countries in Asia, may be due to implementation of remote working for government offices.
 
-Outside of Hubei province, China where the 30 days 
-<!-- This is now 45+, YL will update -->
-of substantial social distancing layered with the strict movement restrictions in Wuhan City and Hubei have reduced the estimated reproduction number from 2.2 (95% CI: 1.4 - 3.9) to 1.58 (95% CI: 1.34 - 2.07), it is likely too early to be able to evaluate or quantify the true effectiveness of specific social distancing interventions on the epidemic in affected countries or regions [@zhang2020impact]. Indeed as most countries have implemented a range of non-pharmaceutical measures such as travel restrictions, health screenings, and advice such as hand and cough hygiene intended to prompt behaviour change, it is likely impossible to quantify the effectiveness of social distancing in the absence of other control measures. However early studies have found that the relative effectiveness of case isolation and contact tracing was greater than travel restrictions or contact reduction [@lai2020effect]. They additionally found that the rapid implementation of these combined NPIs, conducted one, two, or three weeks earlier could have reduced case numbers by 66%, 86%, and 95%, respectively.
+Outside of Hubei province, China where the long term implementation of substantial social distancing layered with the strict movement restrictions in Wuhan City and Hubei have reduced the estimated reproduction number from 2.2 (95% CI: 1.4 - 3.9) to 1.58 (95% CI: 1.34 - 2.07), it is likely too early to be able to evaluate or quantify the true effectiveness of specific social distancing interventions on the epidemic in affected countries or regions [@zhang2020impact]. Indeed as most countries have implemented a range of non-pharmaceutical measures such as travel restrictions, health screenings, and advice such as hand and cough hygiene intended to prompt behaviour change, it is likely impossible to quantify the effectiveness of social distancing in the absence of other control measures. However early studies have found that the relative effectiveness of case isolation and contact tracing was greater than travel restrictions or contact reduction [@lai2020effect]. They additionally found that the rapid implementation of these combined NPIs, conducted one, two, or three weeks earlier could have reduced case numbers by 66%, 86%, and 95%, respectively.
 
 Studies from pandemic influenza have also shown that the timing and duration of SD interventions will impact its effectiveness. For example, for influenza there are restricted benefits to time-limited interventions, with the potential reduction in mortality by up to 30% being eroded if the control was applied too late or lifted too early [@bootsma]. When considering targeted layered containment strategies, Ferguson et al found that the effectiveness of social distancing, rapid case ascertainment, and targeted prophylaxis were similar, with school closures playing an important role in each scenario, especially if values of R0 were ≤2 [REF]. A systematic review of the effectiveness of social distancing measures for pandemic influenza identified varying levels of evidence for avoiding crowding, workplace measures, and case isolation in the community [@lai2020effect]. These particular SD measures are more resource intensive and are socially and economically disruptive. For COVID-19 most isolation has thus far been in a hospital setting. As more cases are reported in the community, protocols around case isolation may change towards voluntary home isolation or household quarantine. Household quarantine for influenza was found to have an overall effect, but within an affected household could increase risk of infection amongst quarantined individuals. Other resource intensive measures such as contact tracing were found to be effective in reducing influenza transmission when used in combination with other interventions such as quarantine and isolation. However this is not feasible in all settings or sustainable beyond the early phase of an epidemic when there are fewer cases. For influenza where children are known to be important for transmission as they are more susceptible to infection, are more infectious, and contribute to higher person-to-person contact rates, there was evidence that school closures could have a substantial effect on reducing transmission. However, the role of children in transmission of COVID-19 is still unknown. If children have the same or similar role in transmission as for influenza, then we could expect the same level of impact as has been estimated for influenza.
 
 However, across all social distancing measures the most important consideration is perhaps the feasibility of its long-term implementation. The most effective measures in terms of stopping transmission, for example the lockdown of entire cities as implemented in Hubei province, are also the most socially and economically disruptive [REF]. As many measures start to be lifted across cities in China, as transmission has effectively been paused, we may observe a bounce-back effect. Countries and regions are therefore faced with the difficult task of balancing economically and socially sustainable and acceptable control measures which are likely to have the largest overall impact with the need to control growing case numbers.
 
-Should we keep the following?
-*Assessing travel restrictions, Tian et al. examined the impact of quarantine and movement restrictions in Wuhan. They found that travel restrictions slowed the rate of spread between cities, delaying the arrival by approximately 2.9 days (95%CI: 2.5-3.3 days) [5]. They also found that measures implemented pre-emptively could reduce cases in the first week of introduction by 37%. Further travel restrictions were examined by Anzai et al. who suggest that, due to the lockdown of Wuhan city, 226 cases were prevented from global exportation (95% CI 86, 449) corresponding to a reduction in exported cases of 70% [6]. Lai et al. found further support for travel restrictions and non-pharmaceutical interventions (NPIs) in general, estimating that without them there would have been a 67-fold increase in cases in Baidu. They also highlighted that had interventions been applied earlier, for example by 3 weeks, the effects would have been even greater, leading to a 95% reduction in cases [8].*
 
 # References
 
@@ -175,11 +169,11 @@ Should we keep the following?
 
 # Supplementary information
 
-## Transmissability over time
+## Transmissability over time - *Suggest drop as not used or discussed?*
 
 ADD FIGURE
 
-## Interventions not realted to social distancing
+## Interventions not related to social distancing
 
 **Supplemental table 1: Table of common non-social distancing interventions in the eight countries/regions with the highest number of cases outside of mainland China and Wuhan City, China.**
 ```{r table S1}
