adding some references

--- a/main-article/main-article-bib.bib
+++ b/main-article/main-article-bib.bib
@@ -108,3 +108,63 @@ title = {{\textbf{Coronavirus disease (COVID-2019) situation reports}}},
 url = {https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports}
 }
 
+@article{indig2018pathways,
+  title={Pathways for scaling up public health interventions},
+  author={Indig, Devon and Lee, Karen and Grunseit, Anne and Milat, Andrew and Bauman, Adrian},
+  journal={BMC Public Health},
+  volume={18},
+  number={1},
+  pages={68},
+  year={2018},
+  publisher={BioMed Central}
+}
+
+@article{leung2020mass,
+  title={Mass masking in the COVID-19 epidemic: people need guidance},
+  author={Leung, Chi Chiu and Lam, Tai Hing and Cheng, Kar Keung},
+  journal={The Lancet},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{glass2006targeted,
+  title={Targeted social distancing designs for pandemic influenza},
+  author={Glass, Robert J and Glass, Laura M and Beyeler, Walter E and Min, H Jason},
+  journal={Emerging infectious diseases},
+  volume={12},
+  number={11},
+  pages={1671},
+  year={2006},
+  publisher={Centers for Disease Control and Prevention}
+}
+
+@article{ferguson2006strategies,
+  title={Strategies for mitigating an influenza pandemic},
+  author={Ferguson, Neil M and Cummings, Derek AT and Fraser, Christophe and Cajka, James C and Cooley, Philip C and Burke, Donald S},
+  journal={Nature},
+  volume={442},
+  number={7101},
+  pages={448--452},
+  year={2006},
+  publisher={Nature Publishing Group}
+}
+
+@website{unesco,
+  title={COVID-19 Educational Disruption and Response},
+  author={{UNESCO}},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://en.unesco.org/themes/education-emergencies/coronavirus-school-closures}
+}
+
+@website{reynolds,
+  title={Japan plays COVID-19 catch-up with rushed state-of-emergency bill},
+  author={Reynolds, I.},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://www.japantimes.co.jp/news/2020/03/11/national/politics-diplomacy/japan-shinzo-abe-coronavirus-emergency-bill/#.XmuWlaj7Ryw}
+}
+
+@website{japantimes,
+  title={Some schools in Japan planning to reopen despite coronavirus outbreak},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://www.japantimes.co.jp/news/2020/03/10/national/japan-schools-reopen-coronavirus/#.XmuX2aj7Ryw}
+}
