--- a/main-article/main-article.Rmd
+++ b/main-article/main-article.Rmd
@@ -65,19 +65,18 @@ We find that, due to relatively sparse information on the differences with and w
 
 # Introduction
 
-As of the 13th of March, over 135,000 cases of coronavirus disease (COVID-19) have been confirmed globally across 130 countries/regions [@WorldHealthOrganization:sitrep]. Sustained human-to-human transmission have now been observed in multiple countries outside of mainland China such as Italy, Japan, and South Korea with 15,113, 639, and 7,869 cases reported, respectively [@WorldHealthOrganization:sitrep]. Conversely, some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country [REF4]. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated [REF5]. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures [REF6].
+As of the 13th of March, over 135,000 cases of coronavirus disease (COVID-19) have been confirmed globally across 130 countries/regions [@WorldHealthOrganization:sitrep]. Sustained human-to-human transmission have now been observed in multiple countries outside of mainland China such as Italy, Japan, and South Korea with 15,113, 639, and 7,869 cases reported, respectively [@WorldHealthOrganization:sitrep]. Conversely, some countries such as Bangladesh are only now reporting their first cases of COVID-19 resulting from importations of infected travellers from affected areas. In response, countries and regions have implemented a wide range of non-pharmaceutical interventions (NPIs). These NPIs have generally been scaled up over time in response to the magnitude of the outbreak in each country [@indig2018pathways]. Non-pharmaceutical interventions can be broadly categorised into: i) personal protective measures such as hand hygiene; ii) environmental measures such as disinfection and ventilation; iii) social distancing measures such as school and workplace closures; and iv) travel related measures such as travel restrictions [@pand_flu]. As the first cases were exported from Wuhan to countries and regions outside mainland China, early efforts focused on containment where infected individuals were rapidly identified and isolated [@wilder]. Contact tracing and active case finding efforts then identified any contacts potentially at risk of infection who were themselves isolated or monitored. Containment efforts thus focused on stopping transmission completely to prevent any community transmission [@anderson2020will]. As case numbers increased and evidence of community transmission became apparent, countries and regions started to introduce a wider range of control measures including travel restrictions, improving public awareness through mass communication, widening surveillance efforts, distributing face masks, and social distancing measures [@leung2020mass].
 
-Social distancing (SD) measures can be effective control measures in outbreak settings [REF7]. These can be broadly defined as: i) isolation, the separation of ill individuals from non-infected individuals; ii) quarantine, the separation of individuals who have been assumed to be exposed and; iii) community containment, an intervention applied to an entire community aimed at reducing contacts and movements including school and workplace closures and restrictions or cancellation of mass gatherings [@wilder]. Social distancing measures are intended to reduce mixing and rates of contact between individuals in the community, therefore reducing rates of potential transmission to the susceptible population [REF8].
+Social distancing (SD) measures can be effective control measures in outbreak settings [@glass2006targeted]. These can be broadly defined as: i) isolation, the separation of ill individuals from non-infected individuals; ii) quarantine, the separation of individuals who have been assumed to be exposed and; iii) community containment, an intervention applied to an entire community aimed at reducing contacts and movements including school and workplace closures and restrictions or cancellation of mass gatherings [@wilder]. Social distancing measures are intended to reduce mixing and rates of contact between individuals in the community, therefore reducing rates of potential transmission to the susceptible population [@ferguson2006strategies].
 
-It is important to note that control measures implemented during an epidemic are usually layered with other interventions and are often targeted. As countries and regions start to move towards mitigating the impact of the epidemic, measures are likely to be implemented to varying degrees [REF9].
-<!-- This is a little vague. We may want to clarify a little bit more? Geographic span? Extent of implementation (e.g., workplace closure of certain sectors)? How much it is being enforced vs. suggested? -->
+It is important to note that control measures implemented during an epidemic are usually layered with other interventions and are often targeted. As countries and regions start to move towards mitigating the impact of the epidemic, measures are likely to be implemented to varying degrees.
 In this study, we focus on the use and potential effectiveness of social distancing measures during the current COVID-19 pandemic.
 
 # Methods
 
 ## Interventions implemented
 
-We extracted the date and type of social distancing interventions implemented in Wuhan (Hubei, China), South Korea, Japan, Hong Kong (Special Administrative Region of China), Singapore, and Italy. Apart from Wuhan, the other countries/regions were chosen as they were among the first or most affected places outside of mainland China (at the time of analysis) in the COVID-19 pandemic [REF10].
+We extracted the date and type of social distancing interventions implemented in Wuhan (Hubei, China), South Korea, Japan, Hong Kong (Special Administrative Region of China), Singapore, and Italy. Apart from Wuhan, the other countries/regions were chosen as they were among the first or most affected places outside of mainland China (at the time of analysis) in the COVID-19 pandemic [@WorldHealthOrganization:sitrep].
 
 Where possible, information on intervention and the date they were implemented were extracted from official government sources such as Ministry of Education websites (see supplementary table X). We categorised the social distancing measures into 7 broad categories as summarised in Table 1. Information and dates of other non-pharmaceutical interventions, aside from social distancing measures, implemented early on in the epidemic such as travel advisories were also extracted (supplementary table X).
 
@@ -102,9 +101,9 @@ We searched PubMed and medRxiv for peer-reviewed literature and pre-prints on th
 
 Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. The beginning of this pandemic coincidece with the Lunar New Year holiday and winter break in China, for which schools and workplaces were scheduled to close on 17 Jan and 24 Jan 2020, respecively. Due to the outbreak in Wuhan, stringent social distancing measures including intensive travel restrictions were introduced in the city on 23 Jan 2020.
 
-In response to the COVID-19 pandemic, school closures have been extended and remain in place as of 11 March 2020 [REF11]. Outside of mainland China, Japan and South Korea reported the first cases of COVID-19 on the 20th January 2020 [REF12]. This was followed quickly by cases reported in Hong Kong (23rd January), Singapore (24th January), and Italy (31 January) [REF13]. In response to these first exported cases, case isolation and contact tracing were implemented by each region or country. Figure 1 shows the timing of interventions in different countries and regions relative to the reported cases over time. The date of the first reported case is also shown to represent the start of contact tracing and case isolation of exported cases. 
+In response to the COVID-19 pandemic, school closures have been extended and remain in place as of 11 March 2020 [@unesco]. Outside of mainland China, Japan and South Korea reported the first cases of COVID-19 on the 20th January 2020 [@reynolds; @WHO_sitrep]. This was followed quickly by cases reported in Hong Kong (23rd January), Singapore (24th January), and Italy (31 January). In response to these first exported cases, case isolation and contact tracing were implemented by each region or country. Figure 1 shows the timing of interventions in different countries and regions relative to the reported cases over time. The date of the first reported case is also shown to represent the start of contact tracing and case isolation of exported cases. 
 
-At the time of analysis, the most commonly implemented social distancing measures in Wuhan (Hubei, China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the social distancing measures and the potential effects on community mixing patterns. We found a substantial variation in the timing and type of social distancing measures adopted by different countries and regions outside of mainland China. Notably, Singapore had implemented some partial social distancing measures even before the first in-country COVID-19 case was reported. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which social distancing measures, such as school closures, have been implemented. For example, within weeks, school closures in Japan which were initially implemented locally in a few affected schools were preemptively extended to the entire nation [REF14]. We also observed that among non-social distancing measures, travel advisories and restrictions were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
+At the time of analysis, the most commonly implemented social distancing measures in Wuhan (Hubei, China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the social distancing measures and the potential effects on community mixing patterns. We found a substantial variation in the timing and type of social distancing measures adopted by different countries and regions outside of mainland China. Notably, Singapore had implemented some partial social distancing measures even before the first in-country COVID-19 case was reported. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which social distancing measures, such as school closures, have been implemented. For example, within weeks, school closures in Japan which were initially implemented locally in a few affected schools were preemptively extended to the entire nation [@japantimes]. We also observed that among non-social distancing measures, travel advisories and restrictions were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
 
 **Table 2: Summary of social distancing interventions implemented in Wuhan City, China and the 8 countries or regions1 reporting the highest number of COVID-19 cases. Countries and regions considered here are: Hong Kong, Italy, Japan, Singapore, South Korea and Wuhan. Many countries have been implementing quarantine measures of travellers. [The number refers to countries or regions where we have identified exact dates of implementation].**
 ```{r table2}
