adding some references

--- a/main-article/main-article-bib.bib
+++ b/main-article/main-article-bib.bib
@@ -168,3 +168,35 @@ url = {https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation
   year={2020},
   url={Retrieved 13 March 2020, from https://www.japantimes.co.jp/news/2020/03/10/national/japan-schools-reopen-coronavirus/#.XmuX2aj7Ryw}
 }
+
+@website{guardian,
+  title={Italy orders closure of all schools and universities due to coronavirus},
+  year={2020},
+  author={Giuffrida, A., Beaumont, P., & Tondo, L.},
+  url={Retrieved 13 March 2020, from https://www.theguardian.com/world/2020/mar/04/italy-orders-closure-of-schools-and-universities-due-to-coronavirus}
+}
+
+@website{hongkong,
+  title={Government holds inter-departmental meeting on cluster of pneumonia cases in Wuhan},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://www.info.gov.hk/gia/general/202001/02/P2020010200831.htm}
+}
+
+@website{hokkaido,
+  title={Hokkaido grapples with coronavirus emergency},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://www3.nhk.or.jp/nhkworld/en/news/backstories/900/}
+}
+
+@website{italy,
+  title={Coronavirus, in dieci comuni lombardi: 50 mila persone costrette a restare in casa. Quarantena all'ospedale milanese di Baggio},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://milano.repubblica.it/cronaca/2020/02/21/news/coronavirus_codogno_castiglione_d_adda_contagiati_misure_sicurezza-249154447/?refresh_ce}
+}
+
+@website{iran,
+  title={Iran is closing schools, scrambling for hospital places, and spraying disinfectant in the subway as coronavirus deaths and cases spike},
+  year={2020},
+  url={Retrieved 13 March 2020, from https://www.businessinsider.com/coronavirus-iran-schools-hospitals-public-transport-2020-2?r=US&IR=T}
+}
+
