--- a/main-article/main-article.Rmd
+++ b/main-article/main-article.Rmd
@@ -38,7 +38,7 @@ output:
       - '--lua-filter=author-info-blocks.lua'
 link-citations: yes
 linkcolor: blue
-csl: iso690-numeric-brackets-cs.csl
+csl: iso690-numeric-en.csl
 bibliography: main-article-bib.bib
 ---
 
@@ -77,7 +77,7 @@ It is important to note that control measures implemented during an epidemic are
 
 We extracted the date and type of SD interventions implemented in Wuhan (Hubei, China), South Korea, Japan, Hong Kong (Special Administrative Region of China), Singapore, and Italy. Apart from Wuhan, the other countries and regions were chosen as they were among the first or most affected places outside of mainland China (at the time of analysis) in the COVID-19 pandemic [@WorldHealthOrganization:sitrep].
 
-Where possible, information on the intervention and the date they were implemented were extracted from official government sources such as Ministry of Education websites (see supplementary table X). We categorised the SD measures into 7 broad categories as summarised in Table 1. Information and dates of other non-pharmaceutical interventions, aside from SD measures, implemented early on in the epidemic such as travel advisories were also extracted (supplementary table X).
+Where possible, information on the intervention and the date they were implemented were extracted from official government sources such as Ministry of Education websites (see supplementary table X). We categorised the SD measures into 7 broad categories as summarised in Table 1. Information and dates of other non-pharmaceutical interventions, aside from SD measures, implemented early on in the epidemic such as travel advisories were also extracted (Table S1).
 
 **Table 1: Summary of social distancing measures considered and/or implemented in response to the COVID-19 epidemic**
 ```{r types_of_interventions}
@@ -89,7 +89,7 @@ df <- data.frame(
 )
 
 
-df %>% flextable::flextable(cwidth = 3) %>% align()
+df %>% flextable::flextable(cwidth = 3) %>% align(part = "all")
 ```
 
 # Results
