--- a/main-article/main-article.Rmd
+++ b/main-article/main-article.Rmd
@@ -96,7 +96,7 @@ df %>% flextable::flextable(cwidth = 3) %>% align(part = "all")
 
 Social distancing measures have been implemented to different degrees by countries and regions affected by the COVID-19 pandemic. The beginning of this pandemic coincided with the Lunar New Year holiday and winter break in China, for which schools and workplaces were scheduled to close on 17 January and 24 Jauaryn 2020, respectively. Due to the outbreak in Wuhan, stringent SD measures including intensive travel restrictions were introduced in the city on 23 January 2020. In response to the COVID-19 pandemic, school closures across China have been extended and remain in place as of 11 March 2020 [@unesco]. Outside of mainland China, Japan and South Korea reported the first cases of COVID-19 on 20 January 2020 [@reynolds; @WorldHealthOrganization:sitrep]. This was followed quickly by cases reported in Hong Kong (23 January), Singapore (24 January), and Italy (31 January). In response to these first exported cases, case isolation and contact tracing were implemented by each region or country. Figure 1 shows the timing of interventions in different countries and regions relative to the reported cases over time. The date of the first reported case is also shown to represent the start of contact tracing and case isolation of exported cases. 
 
-At the time of analysis, the most commonly implemented SD measures in Wuhan (Hubei, China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the SD measures and the potential effects on community mixing patterns. We found a substantial variation in the timing and type of SD measures adopted by different countries and regions outside of mainland China. Notably, Singapore had implemented some partial SD measures even before the first in-country COVID-19 case was reported. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which social distancing measures, such as school closures, have been implemented. For example, within weeks, school closures in Japan which were initially implemented locally in a few affected schools were preemptively extended to the entire nation [@japantimes]. We also observed that among non-social distancing measures, travel advisories and restrictions were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
+At the time of analysis, the most commonly implemented SD measures in Wuhan (Hubei, China) and the five countries and regions reporting the highest COVID-19 case numbers outside of mainland China, were school closures followed by remote working and quarantine. Table 2 summarises the SD measures. We found a substantial variation in the timing and type of SD measures adopted by different countries and regions outside of mainland China. Notably, Singapore had implemented some partial SD measures even before the first in-country COVID-19 case was reported. We observed that countries affected most recently have implemented SD measures most rapidly and in quick succession. There were also differences in the degree to which social distancing measures, such as school closures, have been implemented. For example, within weeks, school closures in Japan which were initially implemented locally in a few affected schools were preemptively extended to the entire nation [@japantimes]. We also observed that among non-social distancing measures, travel advisories and restrictions were the first NPIs implemented by each country or region (see Table S1 for the most common non-SD measures).
 
 **Table 2: Summary of social distancing interventions implemented in Wuhan City, China and the 5 countries or regions reporting the highest number of COVID-19 cases. Countries and regions considered here are: Hong Kong, Italy, Japan, Singapore, South Korea and Wuhan. Many countries have been implementing quarantine measures of travellers.**
 ```{r table2}
