all other edits

--- a/main-article/main-article-bib.bib
+++ b/main-article/main-article-bib.bib
@@ -104,8 +104,43 @@ author  ={{World Health Organisation}}
 
 @webpage{WorldHealthOrganization:sitrep,
 author = {{World Health Organization}},
-title = {{\textbf{Coronavirus disease (COVID-2019) situation reports}}},
+title = {Coronavirus disease (COVID-2019) situation reports},
 url = {https://www.who.int/emergencies/diseases/novel-coronavirus-2019/situation-reports}
+}
+
+@webpage{ecdc,
+author = {European Centre for Disease Control},
+title = {Situation update worldwide}},
+url = {https://www.ecdc.europa.eu/en/geographical-distribution-2019-ncov-cases}
+}
+
+@article{abbott2020transmissibility,
+  title={The transmissibility of novel Coronavirus in the early stages of the 2019-20 outbreak in Wuhan: Exploring initial point-source exposure sizes and durations using scenario analysis},
+  author={Abbott, Sam and Hellewell, Joel and Munday, James and Funk, Sebastian and CMMID nCoV working group and others},
+  journal={Wellcome Open Research},
+  volume={5},
+  number={17},
+  pages={17},
+  year={2020},
+  publisher={F1000 Research Limited}
+}
+
+@article{kucharski2020early,
+  title={Early dynamics of transmission and control of COVID-19: a mathematical modelling study},
+  author={Kucharski, Adam J and Russell, Timothy W and Diamond, Charlie and Liu, Yang and Edmunds, John and Funk, Sebastian and Eggo, Rosalind M and Sun, Fiona and Jit, Mark and Munday, James D and others},
+  journal={The Lancet Infectious Diseases},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{riou2020pattern,
+  title={Pattern of early human-to-human transmission of Wuhan 2019 novel coronavirus (2019-nCoV), December 2019 to January 2020},
+  author={Riou, Julien and Althaus, Christian L},
+  journal={Eurosurveillance},
+  volume={25},
+  number={4},
+  year={2020},
+  publisher={European Centre for Disease Prevention and Control}
 }
 
 @article{indig2018pathways,
